@@ -1,3 +1,6 @@
+Upcoming:
+- Temporary 'fix' to avoid what looks like a bug in Vanilla when clearing out large sections of a chunk. This bug manifests itself when clearing up chunks after being damaged by an explosion
+
 1.16-4.0.3-alpha:
 - Considerably improved Lost City worldgen on world types that use the standard NoiseChunkGenerator
 
